# qiskit-qm-provider

./: .gitignore  CITATION.cff  Changelog.md  LICENSE.md  NOTICE.md  README.md  pyproject.toml
.github/workflows/: docs.yml  publish-to-pypi-on-release.yml
docs/: README.md  _config.yml  backend.md  changelog.md  conf.py  error_correction.md  index.md  installation.md  jobs.md  measurement_outputs.md  parameter_table.md  primitives.md  providers.md  workflows.md
docs/_templates/autosummary/: class.rst  module.rst
docs/apidocs/: qm.rst  qm_backend.rst  qm_job.rst  qm_parameter_table.rst  qm_primitives.rst  qm_providers.rst  qm_pulse.rst  qm_utils.rst
examples/: README.md  circuit_calibrations_pulse.py  custom_gate.py  estimator_workflow.py  iqcc_t1_experiment.py  sampler_workflow.py
qiskit_mods/: exporter.py
qiskit_qm_provider/: __init__.py  additional_gates.py  backend_utils.py  fixed_point.py  iqcc_cloud_provider.py  pulse_support_utils.py  pulse_to_qua.py  qiskit_qm_module.py  qm_backend.py  qm_instruction_properties.py  qm_job.py  qm_provider.py  qm_sampler.py  qm_sampler_job.py  quam_qiskit_pulse.py  runtime.py  sympy_to_qua.py
qiskit_qm_provider/annotations/: __init__.py  annotations.py
qiskit_qm_provider/backend/: __init__.py  backend_utils.py  flux_tunable_transmon_backend.py  measurement_field.py  qm_backend.py  qm_instruction_properties.py  qua_circuit_compilation.py
qiskit_qm_provider/job/: __init__.py  _sync_hook_common.py  iqcc_job_mixin.py  post_hook_estimator.py  post_hook_sampler.py  qm_estimator_job.py  qm_job.py  qm_primitive_job.py  qm_sampler_job.py  qua_programs.py  stream_assembly.py
qiskit_qm_provider/job/templates/: _push_helpers.py.jinja  sync_hook_estimator.py.jinja  sync_hook_sampler.py.jinja
qiskit_qm_provider/parameter_table/: README.md  __init__.py  _deprecation.py  _mixins.py  _scope.py  input_type.py  opnic_binding.py  opnic_utils.py  parameter.py  parameter_pool.py  parameter_table.py  parameter_transformer.py  qua2darray.py  qua_array.py  quarc_emit.py  quarc_live_module.py  quarc_naming.py
qiskit_qm_provider/primitives/: __init__.py  qm_estimator.py  qm_sampler.py
qiskit_qm_provider/providers/: __init__.py  iqcc_cloud_provider.py  qm_provider.py  qm_saas_provider.py
qiskit_qm_provider/pulse/: __init__.py  pulse_support_utils.py  pulse_to_qua.py  quam_qiskit_pulse.py  sympy_to_qua.py
qiskit_qm_provider/quam_macros/: __init__.py
qiskit_qm_provider/quam_macros/superconducting/: __init__.py  add_basic_macros.py  single_qubit_macros.py
quam_macros/superconducting/: single_qubit_macros.py
test/: conftest.py  sync_hook_sampler.py  test_additional_gates.py  test_backend_utils.py  test_chunking.py  test_chunking_primitives.py  test_deprecated_aliases.py  test_estimator_stream_assembly.py  test_fixed_point.py  test_input_type.py  test_iqcc_job_mixin.py  test_job_result_handles.py  test_measurement_field.py  test_package_import_without_quarc.py  test_parameter_pool.py  test_post_hook_sync.py  test_primitives.py  test_qm_backend.py  test_qm_estimator.ipynb  test_qm_instruction_properties.py  test_qm_job_loose_bits.py  test_qm_job_result_header.py  test_qm_provider.py  test_qua_circuit_compilation.py  test_quarc_parameter_table.py  test_sampler_stream_assembly.py  test_scope_bound_declaration.py
test/fixtures/quam_state/: state.json  wiring.json
